WEB 20160908 02 bruno - [css fix] wrapping issue for private resume

--- a/bundles/lincko/app/public/styles/models/resume.css
+++ b/bundles/lincko/app/public/styles/models/resume.css
@@ -52,6 +52,7 @@
 	font-style: italic;
 	color: #131313;
 	padding-bottom: 4px;
+	white-space: normal;
 }
 
 .app_models_resume_individual_shhh {
